--- a/Project1/resume.html
+++ b/Project1/resume.html
@@ -2,13 +2,13 @@
     <head>
         <title>Resume</title>
     </head>
-    <body">
-        <table table align="center">
+    <body>
+        <table table align="center"  cellspacing="0px"  cellpadding="5px" style="width: 500px">
             <tr><th> <img src="d.jpg" alt="photo" width="130" height="150"/></th>
         <th style="background-color: gainsboro;">
             <span>
-                <h2>Miss Dhanashree Dattatraya Umale</h2>
-                <h3>Email id:dhanashreed.uamle25@gmail.com</h3>
+                <h3>Miss Dhanashree Dattatraya Umale</h3>
+                <h4>Email id:dhanashreed.uamle25@gmail.com</h4>
             </span>   
            </th></tr> 
         </table>
