--- a/Project1/resume.html
+++ b/Project1/resume.html
@@ -15,7 +15,7 @@
         <hr style="width:40%;text-align: center; margin-left: 400px; margin-right:350px;">
         <table table align="center">
             <tr><th><h3><ins><p style="text-align: left;">Objective:</p></ins></h3></th> </tr>
-            <tr><th><p style="text-align: left;">Seeking a position in an organisation where i can upgrade my technical skills 
+            <tr><th><p style="text-align: left;">Seeking a position in an organisation where I can upgrade my technical skills 
                 <br>and explore my abilities, skills, sense of dedication to my duties.</p>
             </th></tr>
             <tr><th> </th></tr>
